--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@ My Html Files
   <body>this is for body files</body>
   <title>This is always for a title file</title>
    * this in css means all
+<h2>This is for heading 2</
+  <title>This is always for a title file</title>
+<body> This is a Body tag</body>
 <h3>This is for heading 3</h3>
 <h4>This is for heading 4</h4>
 <title>this is for title file in html</title>
