--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ My Html Files
   <body>this is for body files</body>
   <title>This is always for a title file</title>
    * this in css means all
-<h2>This is for heading 2</
+<h2>This is for heading 2</h2>
+<h2>This is for heading 2</h2>
+<a href="this is my true worship and it is original>
   <title>This is always for a title file</title>
 <body> This is a Body tag</body>
 <h3>This is for heading 3</h3>
